# talks

./: .clang-format  .gitignore  LICENSE  README.md
2018_RR_Intro/: 01_hello_rr.cpp  02_replay.cpp  02_replay.sh  03_threading.cpp  04_stack_smashing.cpp  CMakeLists.txt  README
2020_Rust_Intro/: README  Rust_Intro.md  build_slides.sh
CppCryptoBasics/: CMakeLists.txt  botan_encryption.cpp  botan_hashing.cpp  botan_random.cpp  enc_sql.cpp  ossl_encryption.cpp  ossl_hashing.cpp  ossl_random.cpp  util.cpp  util.h
CppModules/: CMakeLists.txt  main.cpp  module.ixx
CppSecurityBasics/: CMakeLists.txt  hashing_demo.cpp
CppSerialization/: CMakeLists.txt  asn1_serialize.cpp  avro_serialize.cpp  bond_serialize.cpp  boost_serialize.cpp  capnp_serialize.cpp  cereal_serialize.cpp  datasets.h  flatbuf_serialize.cpp  google_bench_demo.cpp  proto3_serialize.cpp  proto3_serialize_arena.cpp  thrift_serialize.cpp
CppSerialization/avro/: serialize.avro  serialize.h
CppSerialization/bond/: cmdargs.tmp  serialize.bond  serialize_apply.cpp  serialize_apply.h  serialize_py.cpp  serialize_reflection.h  serialize_types.cpp  serialize_types.h
CppSerialization/capnp/: CMakeLists.txt  CMakeLists.txt.user.b486fac  Makefile  bond_serialize.cpp  boost_serialize.cpp  capnp_serialize.cpp  cereal_serialize.cpp  datasets.h  proto3_serialize.cpp  serialize.capnp  serialize.capnp.c++  serialize.capnp.h  thrift_serialize.cpp
CppSerialization/cereal/: serialize.h
CppSerialization/flatbuf/: serialize.fbs  serialize_generated.h
CppSerialization/proto3/: serialize.pb.cc  serialize.pb.h
CppSerialization/proto3_arena/: serialize.pb.cc  serialize.pb.h  serialize.proto
CppSerialization/thrift/: serialize.thrift  serialize_constants.cpp  serialize_constants.h  serialize_types.cpp  serialize_types.h
Cpp_Sql/: 01_Sql_Overview.md
DbSample/: CMakeLists.txt  format.sh
DbSample/include/: client.h  db_facade.h  note.h  notebook.h  tag.h
DbSample/include/db/: pg_db.h  qt_db.h  sqlite_db.h  sqlpp_db.h  sqlpp_model.h  wt_db.h
DbSample/include/model/: note.h  notebook.h  tag.h
DbSample/include/pg/: pg_db.h  pq.h
DbSample/include/qtsql/: qt_db.h
DbSample/include/sqlite3/: sqlite3.h  sqlite_db.h
DbSample/include/ui/: cli.h  qt.h
DbSample/resources/: notes.qrc  qtclient.qml
DbSample/src/: db_facade.cpp  main.cpp  pg_main.cpp  sqlite_main.cpp  test.cpp
DbSample/src/db/: pg_db.cpp  qt_db.cpp  sqlite_db.cpp  sqlpp_db.cpp  wt_db.cpp
DbSample/src/ui/: cli.cpp  client.cpp  qt.cpp
NotebookDatabase/: format.sh
NotebookDatabase/include/: client.h  db_facade.h
NotebookDatabase/include/db/: qt_db.h  sqlite_db.h  sqlpp_db.h
NotebookDatabase/include/model/: note.h  tag.h
NotebookDatabase/include/ui/: cli.h  qt.h
NotebookDatabase/resources/: README.txt  notes.qrc  qtclient.qml
NotebookDatabase/src/: db_facade.cpp  main.cpp
NotebookDatabase/src/db/: pg_db.cpp  qt_db.cpp
NotebookDatabase/src/ui/: client.cpp  qt.cpp
