cmake_minimum_required(VERSION 2.8)
project(rr_demo)
find_package(Threads)
SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -fno-stack-protector" )
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")
include_directories(".")
add_executable(01_hello_rr 01_hello_rr.cpp)
add_executable(02_replay 02_replay.cpp)
add_executable(03_threading 03_threading.cpp)
add_executable(04_stack_smashing 04_stack_smashing.cpp)
target_link_libraries(03_threading ${CMAKE_THREAD_LIBS_INIT})
